fix show part of image on mobile phone

--- a/source/css/global.scss
+++ b/source/css/global.scss
@@ -58,9 +58,38 @@ div {
   scroll-behavior: smooth;
 }
 
+// font-awesome icon
+.fa {
+  margin: 0 3px;
+}
+
 .decoration-line {
   width: 100%;
   height: 0;
   margin: 0 auto;
   border-top: 1px solid lighten($color: $color-primary, $amount: 30);
+}
+
+// scroll bar
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+
+  &:horizontal {
+    height: 10px;
+  }
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: lighten($color-primary, 20);
+
+  &:hover {
+    background-color: lighten($color-primary, 10);
+  }
 }
